// Copyright 2015 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package messages;

// BlobWithSHA1 is a wrapper around a binary blob with SHA1 hash to verify
// its integrity.
message BlobWithSHA1 {
  optional bytes blob = 1;
  optional bytes sha1 = 2;
}

// TagCache stores a mapping (package name, tag) -> instance ID to speed up
// subsequence ResolveVersion calls when tags are used.
message TagCache {
  message Entry {
    optional string package = 1;
    optional string tag = 2;
    optional string instance_id = 3;
  }

  // Capped list of entries, most recently resolved is last.
  repeated Entry entries = 1;
}
